{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 54,
  "lineage": "a35afa4a-9de9-8d35-6e75-0920c65cc9a0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-24T12:56:20.893-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/temp-project-305816/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/networks/temp-project-305816-network",
            "priority": 1000,
            "project": "temp-project-305816",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "db-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-24T12:56:20.645-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/temp-project-305816/global/firewalls/db-server",
            "log_config": [],
            "name": "db-server",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/networks/temp-project-305816-network",
            "priority": 1000,
            "project": "temp-project-305816",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/firewalls/db-server",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "db-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-24T12:56:20.973-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/temp-project-305816/global/firewalls/web-server",
            "log_config": [],
            "name": "web-server",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/networks/temp-project-305816-network",
            "priority": 1000,
            "project": "temp-project-305816",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/firewalls/web-server",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.68.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-02-24T15:14:44.872-08:00",
            "id": "projects/temp-project-305816/global/addresses/private-ip-address",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/networks/temp-project-305816-network",
            "prefix_length": 16,
            "project": "temp-project-305816",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/addresses/private-ip-address"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210211",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/zones/us-central1-c/disks/api"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/temp-project-305816/zones/us-central1-c/instances/api",
            "instance_id": "7283626476872361341",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "yd7EmaAyRT0=",
            "name": "api",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.179.188",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/networks/temp-project-305816-network",
                "network_ip": "10.128.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/regions/us-central1/subnetworks/temp-project-305816-network",
                "subnetwork_project": "temp-project-305816"
              }
            ],
            "project": "temp-project-305816",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/zones/us-central1-c/instances/api",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web-server"
            ],
            "tags_fingerprint": "Fcv0aJ--8z8=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/temp-project-305816/global/networks/temp-project-305816-network",
            "mtu": 0,
            "name": "temp-project-305816-network",
            "project": "temp-project-305816",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/temp-project-305816/global/networks/temp-project-305816-network"
          },
          "dependencies": [
            "google_project_service.services"
          ]
        }
      ]
    }
  ]
}